src/main/java/syntactic/test/failing/newId.ru
start {
    Int a;
    a = new capo(1,2,3);
}

/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 3 | 13 | Se esperaba expresión pero se encontró ID: capo |